# ida-mcp-next

./: .gitignore  README.en.md  README.md  pyproject.toml  setting.toml
docs/: 能力矩阵.md
src/ida_mcp_next/: __init__.py  config.py  ida_core.py  logging.py  managed_decompiler.py  test_runner.py
tests/integration/: test_headless_tools.py  test_real_world_regressions.py
tests/unit/: test_directory_analysis.py  test_managed_decompiler.py  test_protocol.py
