[project]
name = "ida-mcp-next"
version = "0.2.0"
description = "IDA Pro 9.2+ headless + 原生 stdio 的下一代 MCP 服务"
readme = "README.md"
authors = [
    { name = "yexi", email = "fanguojun066@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "idapro>=0.0.7",
    "loguru>=0.7.3",
    "rich>=15.0.0",
]

[project.scripts]
ida-mcp-next = "ida_mcp_next.main:main"
ida-mcp-next-test = "ida_mcp_next.test_runner:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.1",
]

[tool.basedpyright]
include = [
    "src",
    "tests",
]
exclude = [
    "tests/fixtures",
]
typeCheckingMode = "strict"
pythonVersion = "3.11"
